--- a/javascript/12Dom-碰壁反弹/多个彩色小球碰壁.html
+++ b/javascript/12Dom-碰壁反弹/多个彩色小球碰壁.html
@@ -1,96 +1,103 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>多个彩色小球碰壁反弹</title>
+	<style>
+	#big {
+		width: 600px;
+		height: 400px;
+		border: 2px solid blue;
+		position: relative;
+	}
 
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-		<style>
-			#big {
-				width: 500px;
-				height: 300px;
-				border: 4px solid blue;
-				position: relative;
-			}
-			
-			.ball {
-				position: absolute;
-				border-radius: 100%;
-			}
-		</style>
-	</head>
+	.small {
+		position: absolute;
+		border-radius: 100%;
+	}
+</style>
+</head>
+<body>
+	<div id="big"></div>
 
-	<body>
-		<div id="big">
+	<script>
+		var oBig = document.getElementById("big");
+		
+		function getRandom(max,min) {
+			return Math.floor(Math.random() * (max - min + 1) + min);
+		}
 
-		</div>
-		<script type="text/javascript">
-			var oBig = document.getElementById("big");
-			//  随机函数
-			function getRandom(min, max) {
-				return Math.floor(Math.random() * (max - min + 1) + min);
-			}
-			//  随机颜色;
-			function getRandomColor() {
-				var r = getRandom(0, 255);
-				var g = getRandom(0, 255);
-				var b = getRandom(0, 255);
-				return "rgb(" + r + "," + g + "," + b + ")";
-			}
-			//  创建小球
-			function createBall() {
-				var d = getRandom(25, 50); //随机直径
-				var newDiv = document.createElement("div");
-				newDiv.className = "ball";
-				newDiv.style.backgroundColor = getRandomColor();
-				newDiv.style.width = d + "px";
-				newDiv.style.height = d + "px";
-				oBig.appendChild(newDiv);
-				moveBall(newDiv);
-			}
-			// 小球移动;
-			function moveBall(obj) {
-				var xSpeed = getRandom(4, 8);
-				var ySpeed = getRandom(4, 8);
-				setInterval(function() {
+		function getColor() {
+			var r = getRandom(255,0);
+			var g = getRandom(255,0);
+			var b = getRandom(255,0);
+			return "rgb(" + r  + "," + g  + "," + b + ")";
+		}
 
-					//水平方向
-					if(obj.offsetLeft >= oBig.clientWidth - obj.offsetWidth) {
-						xSpeed = -xSpeed;
-						oBig.style.width = oBig.clientWidth - xSpeed + "px";
-						if(oBig.clientWidth >= 600) {
-//							oBig.style.width = document.documentElement.clientWidth + "px";
-//							oBig.style.height = document.documentElement.clientHeight + "px";
-							oBig.style.border = "none";
-						}
+		function createBall() {
+			var newDiv = document.createElement("div");
+			oBig.appendChild(newDiv);
+			var d = getRandom(50,25);
+			newDiv.style.width = d + "px";
+			newDiv.style.height = d + "px";
+			newDiv.style.backgroundColor = getColor();
+			newDiv.className = "small";
+			moveBall(newDiv);
+		}
 
-					}
-					if(obj.offsetLeft <= 0) {
-						xSpeed = Math.abs(xSpeed);
+		function moveBall(obj){
+			var speedX = getRandom(8,4);
+			var speedY = getRandom(8,4);
+			setInterval(function(){
+
+
+				// 水平方向
+				if (oBig.clientWidth - obj.offsetWidth <= obj.offsetLeft) {
+					speedX = -speedX;
+					obj.style.left = obj.offsetLeft + speedX + "px";
+					oBig.style.width = oBig.clientWidth + Math.abs(speedX) + "px";
+					if (oBig.clientWidth >= 700) {
+						oBig.style.border = "none";
+						oBig.style.width = document.documentElement.clientWidth + "px";
+						oBig.style.height = document.documentElement.clientHeight + "px";
 					}
 
-					//垂直方向
-					if(obj.offsetTop >= oBig.clientHeight - obj.offsetHeight) {
-						ySpeed = -ySpeed;
-						oBig.style.height = oBig.clientHeight - ySpeed + "px";
-						if(oBig.clientHeight >= 400) {
-							oBig.style.width = document.documentElement.clientWidth + "px";
-							oBig.style.height = document.documentElement.clientHeight + "px";
-							oBig.style.border = "none";
-						}
-					}
-					if(obj.offsetTop <= 0) {
-						ySpeed = Math.abs(ySpeed);
-					}
 
-					obj.style.left = obj.offsetLeft + xSpeed + "px";
-					obj.style.top = obj.offsetTop + ySpeed + "px";
-				}, 20);
+				} else {
+					obj.style.left = obj.offsetLeft + speedX + "px";
 
-			}
-			oBig.onclick = function() {
-				createBall();
-			}
-		</script>
-	</body>
+				}
 
+				if (obj.offsetLeft == 0) {
+					speedX = Math.abs(speedX);
+				}
+
+				// 垂直方向
+				if (oBig.clientHeight - obj.offsetHeight <= obj.offsetTop) {
+					speedY = -speedY;
+					obj.style.top = obj.offsetTop + speedY + "px";
+					oBig.style.height = oBig.clientHeight + Math.abs(speedY) + "px";
+
+
+				} else {
+					obj.style.top = obj.offsetTop + speedY + "px";
+
+				}
+
+				if (obj.offsetTop == 0) {
+					speedY = Math.abs(speedY);
+				}
+
+
+
+			},20);
+		}
+
+		oBig.onclick = function(){
+			createBall();	
+		}
+
+
+	</script>
+</body>
 </html>
